specs/013-array-methods/examples/invalid/indexof-arg-type.ts
let xs: int[] = [1, 2, 3];
console.log(xs.indexOf("two"));
